toltip alignment issue fixed

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2251,7 +2251,7 @@ a:focus, a:hover {
   z-index: 100;
   padding: 6px;
   font-size: 13px;
-  top: 162.2344px !important;
+  /*top: 162.2344px !important;*/
 }
 
 #tooltip:after /* triangle decoration */
@@ -2314,4 +2314,21 @@ a:focus, a:hover {
 
 .add-payment-method a:hover {
   color: #fff !important;
+}
+
+
+.more_info {
+  border-bottom: 1px dotted;
+  position: relative;
+}
+
+.more_info .title {
+  position: absolute;
+  top: 20px;
+  background: silver;
+  padding: 4px;
+  left: 0;
+  width: 267px;
+  margin-left: -148px;
+  z-index: 1;
 }
